logs/Slang/chapter-9/9.4.5--event_nonblocking_assignment_repeat_int_neg.sv.log
name: event_nonblocking_assignment_repeat_int_neg
description: event non blk assignment repeat
should_fail: 0
tags: 9.4.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.5--event_nonblocking_assignment_repeat_int_neg.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.5--event_nonblocking_assignment_repeat_int_neg.sv:15:7: error: language feature not yet supported
		a = repeat(i) @(posedge clk) b;
		    ^~~~~~~~~~~~~~~~~~~~~~~~~~
